Comment out team toggle logic in correct function
Commented out the team toggle logic in the correct function.

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@ function correct() {
 document.getElementById("correctSound").play();
 scores[team]++;
 document.getElementById("score" + team).textContent = scores[team];
-team = team === "A" ? "B" : "A";
+<!--team = team === "A" ? "B" : "A";-->
 document.getElementById("team").textContent = team;
 next();
 }
